IE Length mismatch for 802.11h TPC Report
This issue was migrated from bug 2285 in our old bug tracker.
Original bug information:
Reporter: gor…@nan…
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: Windows XP
Platform: x86
Version: 0.99.7
Attachments:
: TPC Report packet
: TPC Report packet
TPC_report.pcap: text2pcap manufactured frame from sreenshoot(2)
TPC_report1.pcap: tex2pcap manufactured frame of 1:st screenshoot